feat: payvery docs

--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -32,7 +32,7 @@ endpoints:
         name: user_name
         description: '가맹점 아이디'
         required: true
-        example: doloremque
+        example: ea
         type: string
         enumValues: []
         custom: []
@@ -40,13 +40,13 @@ endpoints:
         name: user_pw
         description: '가맹점 패스워드'
         required: true
-        example: id
+        example: in
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: doloremque
-      user_pw: id
+      user_name: ea
+      user_pw: in
     fileParameters: []
     responses:
       -
@@ -169,16 +169,16 @@ endpoints:
       s_dt:
         name: s_dt
         description: '검색 시작일'
-        required: false
-        example: '2023-11-01'
+        required: true
+        example: '2024-09-01'
         type: string
         enumValues: []
         custom: []
       e_dt:
         name: e_dt
         description: '검색 종료일'
-        required: false
-        example: '2023-11-30'
+        required: true
+        example: '2024-09-30'
         type: string
         enumValues: []
         custom: []
@@ -186,16 +186,16 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: id
+        example: inventore
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
       page: 1
       page_size: 20
-      s_dt: '2023-11-01'
-      e_dt: '2023-11-30'
-      search: id
+      s_dt: '2024-09-01'
+      e_dt: '2024-09-30'
+      search: inventore
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -638,7 +638,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 41V6vbPkaZ6hcDad35Ef8ge'
+      - 'Bearer baZ813kcf46eD6vE5hdgaVP'
     controller: null
     method: null
     route: null
@@ -669,23 +669,23 @@ endpoints:
         name: t_dt
         description: 조회일
         required: true
-        example: '2023-11-01'
+        example: '2024-09-01'
+        type: string
+        enumValues: []
+        custom: []
+      search:
+        name: search
+        description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
+        required: false
+        example: doloremque
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
-      t_dt: '2023-11-01'
-    bodyParameters:
-      t_dt:
-        name: t_dt
-        description: ''
-        required: true
-        example: quibusdam
-        type: string
-        enumValues: []
-        custom: []
-    cleanBodyParameters:
-      t_dt: quibusdam
+      t_dt: '2024-09-01'
+      search: doloremque
+    bodyParameters: []
+    cleanBodyParameters: []
     fileParameters: []
     responses:
       -
@@ -755,7 +755,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer Pf4Vda5c3Ev16he6kaDbg8Z'
+      - 'Bearer 6dg3cb4va6aPVhf51kZEDe8'
     controller: null
     method: null
     route: null
@@ -802,7 +802,7 @@ endpoints:
         name: s_dt
         description: '검색 시작일'
         required: true
-        example: '2023-11-01 00:00:00'
+        example: '2024-09-01 00:00:00'
         type: string
         enumValues: []
         custom: []
@@ -810,15 +810,24 @@ endpoints:
         name: e_dt
         description: '검색 종료일'
         required: true
-        example: '2023-11-30 23:59:59'
+        example: '2024-09-30 23:59:59'
+        type: string
+        enumValues: []
+        custom: []
+      search:
+        name: search
+        description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
+        required: false
+        example: blanditiis
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
       page: 1
       page_size: 20
-      s_dt: '2023-11-01 00:00:00'
-      e_dt: '2023-11-30 23:59:59'
+      s_dt: '2024-09-01 00:00:00'
+      e_dt: '2024-09-30 23:59:59'
+      search: blanditiis
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -1046,7 +1055,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer g4dPckDheE6V1abvZ38f5a6'
+      - 'Bearer kaabcDhf5g861Z6EdvVPe43'
     controller: null
     method: null
     route: null
