feat: payvery docs

--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -30,7 +30,7 @@ endpoints:
         name: user_name
         description: '가맹점 아이디'
         required: true
-        example: ea
+        example: in
         type: string
         enumValues: []
         custom: []
@@ -38,13 +38,13 @@ endpoints:
         name: user_pw
         description: '가맹점 패스워드'
         required: true
-        example: in
+        example: velit
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: ea
-      user_pw: in
+      user_name: in
+      user_pw: velit
     fileParameters: []
     responses:
       -
@@ -168,7 +168,7 @@ endpoints:
         name: s_dt
         description: '검색 시작일'
         required: true
-        example: '2024-09-01'
+        example: '2024-09-01 00:00:00'
         type: string
         enumValues: []
         custom: []
@@ -176,7 +176,7 @@ endpoints:
         name: e_dt
         description: '검색 종료일'
         required: true
-        example: '2024-09-30'
+        example: '2024-09-07 23:59:59'
         type: string
         enumValues: []
         custom: []
@@ -184,16 +184,16 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: inventore
+        example: ratione
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
       page: 1
       page_size: 20
-      s_dt: '2024-09-01'
-      e_dt: '2024-09-30'
-      search: inventore
+      s_dt: '2024-09-01 00:00:00'
+      e_dt: '2024-09-07 23:59:59'
+      search: ratione
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -636,7 +636,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer baZ813kcf46eD6vE5hdgaVP'
+      - 'Bearer aE1ZcgbDke4d65V8a63fPvh'
     controller: null
     method: null
     route: null
@@ -675,13 +675,13 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: doloremque
+        example: et
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
       t_dt: '2024-09-01'
-      search: doloremque
+      search: et
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -753,7 +753,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 6dg3cb4va6aPVhf51kZEDe8'
+      - 'Bearer 416fhcE5Vb6ZaeakD83gvPd'
     controller: null
     method: null
     route: null
@@ -808,7 +808,7 @@ endpoints:
         name: e_dt
         description: '검색 종료일'
         required: true
-        example: '2024-09-30 23:59:59'
+        example: '2024-09-07 23:59:59'
         type: string
         enumValues: []
         custom: []
@@ -816,7 +816,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: blanditiis
+        example: nostrum
         type: string
         enumValues: []
         custom: []
@@ -824,8 +824,8 @@ endpoints:
       page: 1
       page_size: 20
       s_dt: '2024-09-01 00:00:00'
-      e_dt: '2024-09-30 23:59:59'
-      search: blanditiis
+      e_dt: '2024-09-07 23:59:59'
+      search: nostrum
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -1053,7 +1053,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer kaabcDhf5g861Z6EdvVPe43'
+      - 'Bearer kfg6Eh6Z3ae41Va5dv8bDPc'
     controller: null
     method: null
     route: null
