--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -32,7 +32,7 @@ endpoints:
         name: user_name
         description: '가맹점 아이디'
         required: true
-        example: in
+        example: animi
         type: string
         enumValues: []
         custom: []
@@ -40,13 +40,13 @@ endpoints:
         name: user_pw
         description: '가맹점 패스워드'
         required: true
-        example: velit
+        example: eos
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: in
-      user_pw: velit
+      user_name: animi
+      user_pw: eos
     fileParameters: []
     responses:
       -
@@ -186,7 +186,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: ratione
+        example: accusantium
         type: string
         enumValues: []
         custom: []
@@ -195,7 +195,7 @@ endpoints:
       page_size: 20
       s_dt: '2024-09-01 00:00:00'
       e_dt: '2024-09-07 23:59:59'
-      search: ratione
+      search: accusantium
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -638,7 +638,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer aE1ZcgbDke4d65V8a63fPvh'
+      - 'Bearer af514a6Zv3hkEbgD6eVdc8P'
     controller: null
     method: null
     route: null
@@ -677,13 +677,13 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: et
+        example: voluptas
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
       t_dt: '2024-09-01'
-      search: et
+      search: voluptas
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -691,19 +691,51 @@ endpoints:
       -
         status: 201
         content: |
-          {
-              "mcht_id": 12345,
-              "appr_amount": 1000,
-              "appr_count": 1,
-              "cxl_amount": -1000,
-              "cxl_count": 1,
-              "sales_amount": 0,
-              "total_count": 2
-          }
+          [
+              {
+                  "id": 12345,
+                  "user_name": "test1235",
+                  "mcht_name": "테스트 가맹점",
+                  "appr_amount": 1000,
+                  "appr_count": 1,
+                  "cxl_amount": -1000,
+                  "cxl_count": 1,
+                  "sales_amount": 0,
+                  "total_count": 2
+              },
+              {
+                  "id": 181244,
+                  "user_name": "test1234",
+                  "mcht_name": "테스트 가맹점2",
+                  "appr_amount": 934000,
+                  "appr_count": 11,
+                  "cxl_amount": 0,
+                  "cxl_count": 0,
+                  "sales_amount": 934000,
+                  "total_count": 11
+              }
+                  
+          ]
         headers: []
         description: ''
         custom: []
     responseFields:
+      user_name:
+        name: user_name
+        description: '가맹점 ID'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      mcht_name:
+        name: mcht_name
+        description: '가맹점 상호'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
       appr_amount:
         name: appr_amount
         description: '승인 금액 합계'
@@ -755,7 +787,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 416fhcE5Vb6ZaeakD83gvPd'
+      - 'Bearer DEehak6d65Zgv3f1PcbV48a'
     controller: null
     method: null
     route: null
@@ -818,7 +850,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: nostrum
+        example: et
         type: string
         enumValues: []
         custom: []
@@ -827,7 +859,7 @@ endpoints:
       page_size: 20
       s_dt: '2024-09-01 00:00:00'
       e_dt: '2024-09-07 23:59:59'
-      search: nostrum
+      search: et
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -1055,7 +1087,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer kfg6Eh6Z3ae41Va5dv8bDPc'
+      - 'Bearer kvZ3f46h5Vd1caea6gbDP8E'
     controller: null
     method: null
     route: null
