--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@casl/vue": "2.2.1",
     "@floating-ui/dom": "1.2.7",
     "@mdi/font": "5.9.55",
+    "@sentry/tracing": "7",
+    "@sentry/vue": "7",
     "@tabler/icons": "2.17.0",
     "@vuepic/vue-datepicker": "^6.1.0",
     "@vueup/vue-quill": "^1.2.0",
