feat: dynamic tabs draggable

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue3-apexcharts": "1.4.1",
     "vue3-pdf-app": "^1.0.3",
     "vue3-perfect-scrollbar": "1.6.1",
+    "vuedraggable": "^4.1.0",
     "vuetify": "npm:@vuetify/nightly@latest",
     "webfontloader": "1.6.28",
     "xlsx": "^0.18.5"
