--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sentry/tracing": "7",
     "@sentry/vue": "7",
     "@tabler/icons": "2.17.0",
+    "@tato30/vue-pdf": "^1.11.2",
     "@vuepic/vue-datepicker": "^6.1.0",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "10.1.0",
@@ -52,7 +53,6 @@
     "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue-virtual-table": "^0.2.22",
     "vue3-apexcharts": "1.4.1",
-    "vue3-pdf-app": "^1.0.3",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuedraggable": "^4.1.0",
     "vuetify": "npm:@vuetify/nightly@latest",
