--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -17,13 +17,12 @@ RUN apk add --no-cache \
 RUN if ! command -v yarn > /dev/null; then npm install -g yarn; fi
 RUN yarn list --pattern @types/node@18.11.18 || yarn add @types/node@18.11.18 typescript@4.9.5 --dev
 RUN yarn list --pattern @iconify/tools || yarn add @iconify/tools @iconify/types @iconify/utils --dev
-RUN yarn install --network-timeout 600000
+RUN yarn install
 
 # 2단계: 빌드 스테이지
 FROM install AS build
 
 WORKDIR /app
-COPY . .
-
+#COPY . .    # 이거때문인가?
 # 빌드 실행
 RUN yarn build
