--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -23,6 +23,13 @@ RUN yarn install
 FROM install AS build
 
 WORKDIR /app
-#COPY . .    # 이거때문인가?
-# 빌드 실행
+
+# 이전 스테이지의 node_modules 복사
+COPY --from=install /app/node_modules ./node_modules
+
+# 빌드에 필요한 소스 파일만 복사
+COPY src ./src
+COPY public ./public
+COPY resources ./resources
+COPY vite.config.ts tsconfig.json ./
 RUN yarn build
