--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -14,6 +14,7 @@ RUN apk add --no-cache \
     giflib-dev \
     libjpeg-turbo-dev \
     freetype-dev
+
 RUN if ! command -v yarn > /dev/null; then npm install -g yarn; fi
 RUN yarn list --pattern @types/node@18.11.18 || yarn add @types/node@18.11.18 typescript@4.9.5 --dev
 RUN yarn list --pattern @iconify/tools || yarn add @iconify/tools @iconify/types @iconify/utils --dev
@@ -33,3 +34,7 @@ COPY public ./public
 COPY resources ./resources
 COPY vite.config.ts tsconfig.json ./
 RUN yarn build
+
+RUN mkdir -p /output && cp -R /app/public/build /output/
+
+
