--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -483,7 +483,7 @@ endpoints:
         custom: []
       'content.*.mcht_settle_fee':
         name: 'content.*.mcht_settle_fee'
-        description: '가맹점 입금 수수료'
+        description: '가맹점 건별 수수료'
         required: false
         example: null
         type: integer
@@ -491,7 +491,7 @@ endpoints:
         custom: []
       'content.*.total_trx_amount':
         name: 'content.*.total_trx_amount'
-        description: '가맹점 총 거래 수수료(입금 수수료 + 거래 수수료)'
+        description: '가맹점 총 거래 수수료(건별 수수료 + 거래 수수료)'
         required: false
         example: null
         type: integer
